AppCenter: Fix-User_UI_US07: Fix display on mobile device. (#22)

--- a/app-center-webapps/src/main/webapp/skin/less/app-center.less
+++ b/app-center-webapps/src/main/webapp/skin/less/app-center.less
@@ -467,7 +467,7 @@
   box-shadow: 0 2px 9px 0 rgba(0, 0, 0, 0.02);
 
   .userApplicationTitle {
-    width: 100%;
+    width: max-content;
     color: #6d6d6d;
     font-size: 20px;
     font-weight: 500;
@@ -715,46 +715,54 @@
   color: @greyColorLighten1Default!important;
 }
 @media screen and (max-width: 1264px) {
-  .userApplications .authorizedApplications {
-    flex: 1 1 60%;
-  }
-  .userApplications .authorizedApplications .authorizedApplication {
-    padding: 20px 5px!important;
+  .userApplications {
+    .authorizedApplications {
+      flex: 1 1 60%;
+
+      .authorizedApplication {
+        padding: 20px 5px!important;
+      }
+    }
   }
 }
 @media screen and (max-width: 767px) {
-  .userApplications .authorizedApplications {
-    flex: 1 1 100%;
-    margin-right: 0;
-    border-right: none;
-  }
-  .userApplications .authorizedApplications .authorizedApplication {
-    flex: 0 1 41%!important;
-    padding: 20px 15px!important;
-  }
-  .userApplications .userFavoriteApplications {
-    flex: 1 1 100%;
-    margin-top: 20px;
-    padding-top: 20px;
-    border-top: 1px solid #f5f5f5;
+  .userApplications {
+    .authorizedApplications {
+      flex: 1 1 100%;
+      margin-right: 0;
+      border-right: none;
+
+      .authorizedApplication {
+        flex: 0 1 41%!important;
+        padding: 20px 15px!important;
+      }
+    }
+    .userFavoriteApplications {
+      flex: 1 1 100%;
+      margin-top: 20px;
+      padding-top: 20px;
+      border-top: 1px solid #f5f5f5;
+    }
   }
 }
 @media screen and (max-width: 481px) {
-  .userApplications .authorizedApplications .authorizedApplication {
-    flex: 0 1 100%!important;
-  }
-  .userApplications .applicationButton a,
-  .userApplications .applicationButton button {
-    text-align: center;
-    line-height: initial;
-    display: block;
-    margin: 5px 0;
-  }
-  .userApplications .applicationButton a {
-    width: auto;
-  }
-  .userApplications .applicationButton button {
-    width: 100%;
+  .userApplications {
+    margin: 0;
+    .authorizedApplications .authorizedApplication {
+      flex: 0 1 100%!important;
+    }
+    .applicationButton a, .applicationButton button {
+      text-align: center;
+      line-height: initial;
+      display: block;
+      margin: 5px 0;
+    }
+    .applicationButton a {
+      width: auto;
+    }
+    .applicationButton button {
+      width: 100%;
+    }
   }
 }
 /* This file contains CSS for my applications portlet on home page */
